syntax = "proto3";

message BoxType {
    string background_color = 2;
}
